Scouter 관련 내용 수정
* jvm 옵션 추가: -Djdk.attach.allowAttachSelf=true
* SETLOCAL을 하면 환경변수를 지역변수화 해준다고 함. Tomcat의 catalina.bat 에 있길레 따라서 넣어봄.